prac: java for problem _040_Combination_Sum_II